jobs4u.core/src/main/java/lapr4/jobs4u/lprog/interviewModels/interviewModelParser.java
// Generated from C:/Users/tiago/IdeaProjects/sem4pi-23-24-2dl1/jobs4u.core/src/main/java/lapr4/jobs4u/lprog/interviewModels/interviewModel.g4 by ANTLR 4.13.1
package lapr4.jobs4u.lprog.interviewModels;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class interviewModelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, TK_TRUE=16, 
		TK_FALSE=17, TK_TEXT=18, TK_LETTER=19, TK_DIGIT=20, TK_DATE=21, TK_TIME=22, 
		TK_QUEST=23, NEWLINE=24, WS=25, TEXT=26;
	public static final int
		RULE_start = 0, RULE_questions = 1, RULE_answers = 2, RULE_qtruefalse = 3, 
		RULE_atruefalse = 4, RULE_rtruefalse = 5, RULE_qshorttextanswer = 6, RULE_ashorttextanswer = 7, 
		RULE_rshorttextanswer = 8, RULE_qchoicesingle = 9, RULE_achoicesingle = 10, 
		RULE_rchoicesingle = 11, RULE_qchoicemultiple = 12, RULE_achoicemultiple = 13, 
		RULE_rchoicemultiple = 14, RULE_qintegernumber = 15, RULE_aintegernumber = 16, 
		RULE_rintegernumber = 17, RULE_qdecimalnumber = 18, RULE_adecimalnumber = 19, 
		RULE_rdecimalnumber = 20, RULE_qdate = 21, RULE_adate = 22, RULE_rdate = 23, 
		RULE_qtime = 24, RULE_atime = 25, RULE_rtime = 26, RULE_qnumericscale = 27, 
		RULE_anumericscale = 28, RULE_rnumericscale = 29, RULE_question = 30, 
		RULE_phrase = 31, RULE_choices = 32, RULE_choiceNumber = 33, RULE_choice = 34, 
		RULE_answerField = 35, RULE_mark = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "questions", "answers", "qtruefalse", "atruefalse", "rtruefalse", 
			"qshorttextanswer", "ashorttextanswer", "rshorttextanswer", "qchoicesingle", 
			"achoicesingle", "rchoicesingle", "qchoicemultiple", "achoicemultiple", 
			"rchoicemultiple", "qintegernumber", "aintegernumber", "rintegernumber", 
			"qdecimalnumber", "adecimalnumber", "rdecimalnumber", "qdate", "adate", 
			"rdate", "qtime", "atime", "rtime", "qnumericscale", "anumericscale", 
			"rnumericscale", "question", "phrase", "choices", "choiceNumber", "choice", 
			"answerField", "mark"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'[TRUE/FALSE]'", "'-'", "'[LIMIT OF ANSWER SIZE: '", "' CHARS]'", 
			"'[SINGLE CHOICE]'", "'[MULTIPLE CHOICE]'", "','", "'[INTEGER ANSWER]'", 
			"'[DECIMAL ANSWER WITH TWO DECIMAL PLACES]'", "'.'", "'[DATE ANSWER WITH FORMAT: DD/MM/YYYY]'", 
			"'[TIME ANSWER WITH FORMAT: hh:mm]'", "'[ANSWER BETWEEN:'", "']'", "':'", 
			null, null, null, null, null, null, null, "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "TK_TRUE", "TK_FALSE", "TK_TEXT", "TK_LETTER", 
			"TK_DIGIT", "TK_DATE", "TK_TIME", "TK_QUEST", "NEWLINE", "WS", "TEXT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "interviewModel.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    int totalMarks = 0;

	    public int getTotalMarks() {
	            return totalMarks;
	        }

	public interviewModelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(interviewModelParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(interviewModelParser.NEWLINE, i);
		}
		public List<QuestionsContext> questions() {
			return getRuleContexts(QuestionsContext.class);
		}
		public QuestionsContext questions(int i) {
			return getRuleContext(QuestionsContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interviewModelVisitor ) return ((interviewModelVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TK_TEXT || _la==TK_DIGIT) {
					{
					setState(74);
					questions();
					}
				}

				setState(77);
				match(NEWLINE);
				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 18087936L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QuestionsContext extends ParserRuleContext {
		public QshorttextanswerContext qshorttextanswer() {
			return getRuleContext(QshorttextanswerContext.class,0);
		}
		public QchoicemultipleContext qchoicemultiple() {
			return getRuleContext(QchoicemultipleContext.class,0);
		}
		public QchoicesingleContext qchoicesingle() {
			return getRuleContext(QchoicesingleContext.class,0);
		}
		public QdateContext qdate() {
			return getRuleContext(QdateContext.class,0);
		}
		public QtruefalseContext qtruefalse() {
			return getRuleContext(QtruefalseContext.class,0);
		}
		public QtimeContext qtime() {
			return getRuleContext(QtimeContext.class,0);
		}
		public QintegernumberContext qintegernumber() {
			return getRuleContext(QintegernumberContext.class,0);
		}
		public QnumericscaleContext qnumericscale() {
			return getRuleContext(QnumericscaleContext.class,0);
		}
		public QdecimalnumberContext qdecimalnumber() {
			return getRuleContext(QdecimalnumberContext.class,0);
		}
		public QuestionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_questions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).enterQuestions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).exitQuestions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interviewModelVisitor ) return ((interviewModelVisitor<? extends T>)visitor).visitQuestions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuestionsContext questions() throws RecognitionException {
		QuestionsContext _localctx = new QuestionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_questions);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				qshorttextanswer();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				qchoicemultiple();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				qchoicesingle();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(85);
				qdate();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				qtruefalse();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(87);
				qtime();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(88);
				qintegernumber();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(89);
				qnumericscale();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(90);
				qdecimalnumber();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnswersContext extends ParserRuleContext {
		public AshorttextanswerContext ashorttextanswer() {
			return getRuleContext(AshorttextanswerContext.class,0);
		}
		public AchoicemultipleContext achoicemultiple() {
			return getRuleContext(AchoicemultipleContext.class,0);
		}
		public AchoicesingleContext achoicesingle() {
			return getRuleContext(AchoicesingleContext.class,0);
		}
		public AdateContext adate() {
			return getRuleContext(AdateContext.class,0);
		}
		public AtruefalseContext atruefalse() {
			return getRuleContext(AtruefalseContext.class,0);
		}
		public AtimeContext atime() {
			return getRuleContext(AtimeContext.class,0);
		}
		public AintegernumberContext aintegernumber() {
			return getRuleContext(AintegernumberContext.class,0);
		}
		public AnumericscaleContext anumericscale() {
			return getRuleContext(AnumericscaleContext.class,0);
		}
		public AdecimalnumberContext adecimalnumber() {
			return getRuleContext(AdecimalnumberContext.class,0);
		}
		public AnswersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_answers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).enterAnswers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).exitAnswers(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interviewModelVisitor ) return ((interviewModelVisitor<? extends T>)visitor).visitAnswers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnswersContext answers() throws RecognitionException {
		AnswersContext _localctx = new AnswersContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_answers);
		try {
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				ashorttextanswer();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				achoicemultiple();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(95);
				achoicesingle();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(96);
				adate();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(97);
				atruefalse();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(98);
				atime();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(99);
				aintegernumber();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(100);
				anumericscale();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(101);
				adecimalnumber();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QtruefalseContext extends ParserRuleContext {
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(interviewModelParser.NEWLINE, 0); }
		public AnswerFieldContext answerField() {
			return getRuleContext(AnswerFieldContext.class,0);
		}
		public AtruefalseContext atruefalse() {
			return getRuleContext(AtruefalseContext.class,0);
		}
		public QtruefalseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qtruefalse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).enterQtruefalse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).exitQtruefalse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interviewModelVisitor ) return ((interviewModelVisitor<? extends T>)visitor).visitQtruefalse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QtruefalseContext qtruefalse() throws RecognitionException {
		QtruefalseContext _localctx = new QtruefalseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_qtruefalse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			question();
			setState(105);
			match(T__0);
			setState(106);
			match(NEWLINE);
			setState(107);
			answerField();
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TK_TRUE || _la==TK_FALSE) {
				{
				setState(108);
				atruefalse();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AtruefalseContext extends ParserRuleContext {
		public RtruefalseContext rtruefalse() {
			return getRuleContext(RtruefalseContext.class,0);
		}
		public MarkContext mark() {
			return getRuleContext(MarkContext.class,0);
		}
		public AtruefalseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atruefalse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).enterAtruefalse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).exitAtruefalse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interviewModelVisitor ) return ((interviewModelVisitor<? extends T>)visitor).visitAtruefalse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AtruefalseContext atruefalse() throws RecognitionException {
		AtruefalseContext _localctx = new AtruefalseContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_atruefalse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(111);
			rtruefalse();
			}
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(112);
				match(T__1);
				setState(113);
				mark();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RtruefalseContext extends ParserRuleContext {
		public TerminalNode TK_TRUE() { return getToken(interviewModelParser.TK_TRUE, 0); }
		public TerminalNode TK_FALSE() { return getToken(interviewModelParser.TK_FALSE, 0); }
		public RtruefalseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rtruefalse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).enterRtruefalse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).exitRtruefalse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interviewModelVisitor ) return ((interviewModelVisitor<? extends T>)visitor).visitRtruefalse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RtruefalseContext rtruefalse() throws RecognitionException {
		RtruefalseContext _localctx = new RtruefalseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_rtruefalse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_la = _input.LA(1);
			if ( !(_la==TK_TRUE || _la==TK_FALSE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QshorttextanswerContext extends ParserRuleContext {
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(interviewModelParser.NEWLINE, 0); }
		public AnswerFieldContext answerField() {
			return getRuleContext(AnswerFieldContext.class,0);
		}
		public AshorttextanswerContext ashorttextanswer() {
			return getRuleContext(AshorttextanswerContext.class,0);
		}
		public List<TerminalNode> TK_DIGIT() { return getTokens(interviewModelParser.TK_DIGIT); }
		public TerminalNode TK_DIGIT(int i) {
			return getToken(interviewModelParser.TK_DIGIT, i);
		}
		public QshorttextanswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qshorttextanswer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).enterQshorttextanswer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).exitQshorttextanswer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interviewModelVisitor ) return ((interviewModelVisitor<? extends T>)visitor).visitQshorttextanswer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QshorttextanswerContext qshorttextanswer() throws RecognitionException {
		QshorttextanswerContext _localctx = new QshorttextanswerContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_qshorttextanswer);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			question();
			setState(119);
			match(T__2);
			setState(125); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(121); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(120);
						match(TK_DIGIT);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(123); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				}
				setState(127); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TK_DIGIT );
			setState(129);
			match(T__3);
			setState(130);
			match(NEWLINE);
			setState(131);
			answerField();
			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TK_TEXT || _la==TK_DIGIT) {
				{
				setState(132);
				ashorttextanswer();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AshorttextanswerContext extends ParserRuleContext {
		public RshorttextanswerContext rshorttextanswer() {
			return getRuleContext(RshorttextanswerContext.class,0);
		}
		public MarkContext mark() {
			return getRuleContext(MarkContext.class,0);
		}
		public AshorttextanswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ashorttextanswer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).enterAshorttextanswer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).exitAshorttextanswer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interviewModelVisitor ) return ((interviewModelVisitor<? extends T>)visitor).visitAshorttextanswer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AshorttextanswerContext ashorttextanswer() throws RecognitionException {
		AshorttextanswerContext _localctx = new AshorttextanswerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ashorttextanswer);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			rshorttextanswer();
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(136);
				match(T__1);
				setState(137);
				mark();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RshorttextanswerContext extends ParserRuleContext {
		public PhraseContext phrase() {
			return getRuleContext(PhraseContext.class,0);
		}
		public RshorttextanswerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rshorttextanswer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).enterRshorttextanswer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).exitRshorttextanswer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interviewModelVisitor ) return ((interviewModelVisitor<? extends T>)visitor).visitRshorttextanswer(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RshorttextanswerContext rshorttextanswer() throws RecognitionException {
		RshorttextanswerContext _localctx = new RshorttextanswerContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_rshorttextanswer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			phrase();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class QchoicesingleContext extends ParserRuleContext {
		public QuestionContext question() {
			return getRuleContext(QuestionContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(interviewModelParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(interviewModelParser.NEWLINE, i);
		}
		public ChoicesContext choices() {
			return getRuleContext(ChoicesContext.class,0);
		}
		public AnswerFieldContext answerField() {
			return getRuleContext(AnswerFieldContext.class,0);
		}
		public AchoicesingleContext achoicesingle() {
			return getRuleContext(AchoicesingleContext.class,0);
		}
		public QchoicesingleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qchoicesingle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).enterQchoicesingle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).exitQchoicesingle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interviewModelVisitor ) return ((interviewModelVisitor<? extends T>)visitor).visitQchoicesingle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QchoicesingleContext qchoicesingle() throws RecognitionException {
		QchoicesingleContext _localctx = new QchoicesingleContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_qchoicesingle);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			question();
			setState(143);
			match(T__4);
			setState(144);
			match(NEWLINE);
			setState(145);
			choices();
			setState(146);
			match(NEWLINE);
			setState(147);
			answerField();
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TK_DIGIT) {
				{
				setState(148);
				achoicesingle();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AchoicesingleContext extends ParserRuleContext {
		public RchoicesingleContext rchoicesingle() {
			return getRuleContext(RchoicesingleContext.class,0);
		}
		public MarkContext mark() {
			return getRuleContext(MarkContext.class,0);
		}
		public AchoicesingleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_achoicesingle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).enterAchoicesingle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof interviewModelListener ) ((interviewModelListener)listener).exitAchoicesingle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof interviewModelVisitor ) return ((interviewModelVisitor<? extends T>)visitor).visitAchoicesingle(this);
			else return visitor.visitChildren(this);
		}
	}
